--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 7 In Class Examples</title>
     <link href="css/style.css" rel="stylesheet">
+
 </head>
 <body>
+    
     <nav>
         <p>Week 7 In Class Examples</p>
     </nav>
@@ -21,6 +23,9 @@
         </ul>
         <div id="fonts" class="topic">
             <h2>Fonts</h2>
+            <p>Font Weight 1</p>
+            <p><b>Font Weight 2</b></p>
+ 
         </div>
         <div id="pseudo" class="topic">
             <h2>Pseudo-Classes</h2>
