Class Example Final

--- a/index.html
+++ b/index.html
@@ -25,14 +25,35 @@
             <h2>Fonts</h2>
             <p>Font Weight 1</p>
             <p><b>Font Weight 2</b></p>
- 
+            <p>Font Size</p>
+            <p>Font Size 4</p>
+            <p>Font Style</p>
+            <p>Font Weight 1</p>
+            <p><b>Font Weight 2</b></p>
+            <p>Font Size</p>
+            <p>Font Size 4</p>
+            <p>Font Style</p>
+            <p>Font Weight 1</p>
+            <p><b>Font Weight 2</b></p>
+            <p>Font Size</p>
+            <p>Font Size 4</p>
+            <p>Font Style</p>
         </div>
         <div id="pseudo" class="topic">
             <h2>Pseudo-Classes</h2>
+            <a href="https://www.rtc.edu">Home</a>
         </div>
 
         <div id="transitions" class="topic">
             <h2>Transitions</h2>
+            <p>Move This Box</p>
+            <ul>
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+                <li>4</li>
+                <li>5</li>
+            </ul>
         </div>
 
 
